--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsfest-2019-demo-hexagonal",
+  "name": "demo-hexagonal",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,17 +14,10 @@
     "test:integration": "mocha dist/test/integration/**/*.spec.js -t 30000",
     "test:unit": "mocha dist/test/unit/**/*.spec.js",
     "test": "mocha dist/test/**/*.spec.js -t 30000",
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Stormteller/jsfest-2019-demo-hexagonal.git"
+    "watch": "tsc --watch"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Stormteller/jsfest-2019-demo-hexagonal/issues"
-  },
-  "homepage": "https://github.com/Stormteller/jsfest-2019-demo-hexagonal#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
     "class-transformer": "^0.1.10",
@@ -66,7 +59,7 @@
     "pino-pretty": "^2.4.0",
     "sinon": "^7.1.1",
     "ts-mockito": "^2.3.1",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.6"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   }
 }
